
Upgraded to the latest RSyntax version (2.5.3).

Syntax Plugin: Made background color for white spaces affect the whole SQL editors background, see menu File --> New Session Properties --> tab Syntax
   Note: If you combine this feature with the Metal-Charcoal Look and Feel you can make SQuirreL appear in "fashionable" black.
   Thanks to Duane Redfern for the patch.


Bug fixes:
SQuirreL once and again hangs for some seconds on Windows.
  With help of the new detectEDT-feature it was possible to track the problem back to a JDK problem: https://bugs.openjdk.java.net/browse/JDK-6477756
  A workaround is to use the JVM parameter -Dsun.awt.nopixfmt=true. This parameter was introduced to the start batches we ship.
  People who experience the problem and use their own start batches set the parameter manually.

#1177 Export results to xls fails for large exports that contain DATE columns
  Thanks to Neville Rowe for the fix.

Tool bar of SQL Worksheet was doubled any time it was moved from between different frames.

#1174 PostgreSQL: create table script: wrong data type numeric

3.6.0 (10/12/2014)
==================

Enhancements:

When adjusting table column widths a maximum width may now be defined.
  See menu File --> Global Preferences --> Tab General --> right column

Speeded up reading and writing Alias properties. As result opening and closing a connections will be much faster for big, complicated databases.
  Thanks to Jaroslaw Jarmolowicz for the patch

Starting and stopping Squirell is much faster for big, complicated databases
  Thanks to Jaroslaw Jarmolowicz for the patch

Postgres Plugin:
- For postgres query plans explain was used which is less accurate than explain analyze so it was changed to use it instead.
- Previous implementation had limitation of producing query plans only for SELECT queries. It was changed so query plan can work for every type of query.
- Query plan executions are wrapped in transaction so they don't change database state.