@@ -31,20 +31,6 @@
 
 <p class="menu_divider"></p>
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-	<tr>
-		<td width='10' height='10'><img border="0" src="images/border_tl.gif" width="10" height="10"></td>
-		<td width='100%' height='10'><img border="0" src="images/border_t.gif" width="100%" height="10"></td>
-		<td width='10' height='10'><img border="0" src="images/border_tr.gif" width="10" height="10"></td>
-	</tr>
-	<tr>
-		<td width='10' height='10'><img border="0" src="images/border_bl.gif" width="10" height="10"></td>
-		<td width='100%' height='10'><img border="0" src="images/border_b.gif" width="100%" height="10"></td>
-		<td width='10' height='10'><img border="0" src="images/border_br.gif" width="10" height="10"></td>
-	</tr>
-</table>
-
-
 
 <p class="menu_divider"></p>
 
@@ -114,6 +100,21 @@
             <br>
             <center>
                 <h3 class="body">
+                    New snapshot release 20150221_2246 including bug fix of<br>
+                    <a href="http://sourceforge.net/p/squirrel-sql/bugs/1157/">#1177: "Export results to xls fails"</a><br>
+                    As well as:<br>
+                    SQuirreL once and again hangs for some seconds on Windows.
+                    With help of the new detectEDT-feature it was possible to track the problem back to a JDK problem: <A href="https://bugs.openjdk.java.net/browse/JDK-6477756">https://bugs.openjdk.java.net/browse/JDK-6477756</A>.
+                    A workaround is to use the JVM parameter -Dsun.awt.nopixfmt=true. This parameter was introduced to the start batches we ship.
+                    People who experience the problem and use their own start batches should set the parameter manually.<br>
+                    For details see <a href="http://sourceforge.net/p/squirrel-sql/git/ci/master/tree/sql12/core/doc/changes.txt">Changelog</a>.
+                    <br>
+                    <A href="http://sourceforge.net/projects/squirrel-sql/files/3-snapshots/snapshot-20150221_2246/squirrel-sql-snapshot-20150221_2246-standard.jar/download">Download installer for Windows/Linux/others</a><br>
+                    <A href="http://sourceforge.net/projects/squirrel-sql/files/3-snapshots/snapshot-20150221_2246/squirrel-sql-snapshot-20150221_2246-MACOSX-install.jar/download">Download installer for Mac OS </a><br>
+                </h3>
+            </center>
+            <center>
+                <h3 class="body">
 					New snapshot release 20141108_2236 including feature:<br>
 					When adjusting table column widths a maximum width may now be defined.<br>
 					For details see <a href="http://sourceforge.net/p/squirrel-sql/git/ci/master/tree/sql12/core/doc/changes.txt">Changelog</a>.<br>
@@ -124,15 +125,6 @@
             <center>
                 <h3 class="body">
                     New release 3.6<br>
-                    <A href="http://sourceforge.net/projects/squirrel-sql/files/3-snapshots/snapshot-20140830_1158/squirrel-sql-snapshot-20140830_1158-standard.jar/download">Download installer for Windows/Linux/others</a><br>
-                    <A href="http://sourceforge.net/projects/squirrel-sql/files/3-snapshots/snapshot-20140830_1158/squirrel-sql-snapshot-20140830_1158-MACOSX-install.jar/download">Download installer for Mac OS </a><br>
-                </h3>
-            </center>
-            <center>
-                <h3 class="body">
-                    New snapshot release 20140830_1158 including bug fix of  <a href="http://sourceforge.net/p/squirrel-sql/bugs/1157/">#1157: "Move line feature didn't work"</a><br>
-                    as well as some bug fixes and enhancements of the "Show foreign key references" feature<br>
-                    This snapshot is the second release candidate for version 3.6.<br>
                     <A href="http://sourceforge.net/projects/squirrel-sql/files/1-stable/3.6.0/squirrel-sql-3.6-standard.jar/download">Download installer for Windows/Linux/others</a><br>
                     <A href="http://sourceforge.net/projects/squirrel-sql/files/1-stable/3.6.0/squirrel-sql-3.6-MACOSX-install.jar/download">Download installer for Mac OS </a><br>
                 </h3>
